// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput renders component 1`] = `
<TextField
  InputProps={
    Object {
      "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <pure(VisibilityOffIcon) />
        </WithStyles(IconButton)>
      </WithStyles(WithFormControlContext(InputAdornment))>,
    }
  }
  error={false}
  fullWidth={true}
  id="password"
  label="Master password"
  margin="normal"
  onChange={[MockFunction]}
  required={false}
  select={false}
  type="password"
  value="test password"
  variant="outlined"
/>
`;

exports[`PasswordInput renders with error 1`] = `
<TextField
  InputProps={
    Object {
      "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <pure(VisibilityOffIcon) />
        </WithStyles(IconButton)>
      </WithStyles(WithFormControlContext(InputAdornment))>,
    }
  }
  error={true}
  fullWidth={true}
  id="password"
  label="Password"
  margin="normal"
  onChange={[MockFunction]}
  required={false}
  select={false}
  type="password"
  value=""
  variant="outlined"
/>
`;

exports[`PasswordInput renders with password visible 1`] = `
<TextField
  InputProps={
    Object {
      "endAdornment": <WithStyles(WithFormControlContext(InputAdornment))
        position="end"
      >
        <WithStyles(IconButton)
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <pure(VisibilityIcon) />
        </WithStyles(IconButton)>
      </WithStyles(WithFormControlContext(InputAdornment))>,
    }
  }
  error={true}
  fullWidth={true}
  id="password"
  label="Password"
  margin="normal"
  onChange={[MockFunction]}
  required={false}
  select={false}
  type="test"
  value=""
  variant="outlined"
/>
`;
